# gpu-proton-radiography

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES.md  demo.py  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  validate.py
adaptive_timestep/: index.html
benchmark/: index.html
benchmarks/: plot.py  run_convergence_N.py  run_convergence_dt.py  run_convergence_grid.py  run_convergence_grid_analytic.py  run_perf.py  run_physics.py  run_plasmapy.py  run_plasmapy_physics.py  run_plasmapy_scaling.py  run_plasmapy_scaling_adaptive.py  utils.py
convergence/: index.html
data/: test_config.json  test_field_meta.json  test_particles_meta.json
docs/: adaptive_timestep.md  benchmark.md  convergence.md  field_compositing.md  file_formats.md  geometry.md  gui.md  index.md  input_decks.md  limitations.md  python_api.md  quickstart.md  rendering.md  run_artifacts.md  spectra.md  stopping_power.md  sweeps.md  validation.md
field_compositing/: index.html
input_decks/: index.html
limitations/: index.html
paper/: prad.bib  prad_manuscript.tex
prad/: __init__.py  _binary.py  _deck.py  _field.py  _result.py
python/: field_format.py  source_config.py
quickstart/: index.html
rust/: Cargo.toml  build.rs
rust/src/: camera.rs  config.rs  dt_schedule.rs  gui.rs  inspect.rs  main.rs  overrides.rs  run_dir.rs  stopping_power.rs  sweep.rs  units.rs
rust/src/gpu/: buffers.rs  compute.rs  context.rs  diagnostic.rs  egui_renderer.rs  graphics.rs  mod.rs  renderer.rs  swapchain.rs  timing.rs
rust/src/loaders/: config.rs  density.rs  field.rs  mod.rs  particles.rs
scripts/: check_canonical_momentum.py  demo_mesh_radiograph.py  fig_energy_sweep.py  fig_paraxial_breakdown.py  fig_spectra.py  generate_instabilities.py  generate_magpie.py  reproduce_paper.py  run_all_instabilities.sh  smoke_run_dir.py
search/: search_index.json
shaders/: boris.comp  boris.comp.spv  boris.spv  boris_diag.comp  boris_diag.spv  detector.frag  detector.frag.spv  detector3d.vert  detector3d.vert.spv  egui.frag  egui.frag.spv  egui.vert  egui.vert.spv  fullscreen.vert  fullscreen.vert.spv  marker.frag  marker.frag.spv  marker.vert  marker.vert.spv  volume.frag  volume.frag.spv
site/: 404.html  (+2 more)
(+113 files in other folders)
