[package]
name = "proton_tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Vulkan
ash = { version = "0.38", default-features = false, features = ["loaded", "debug"] }
gpu-allocator = "0.27"

# Windowing
winit = "0.30"
raw-window-handle = "0.6"

# Math
glam = "0.29"
bytemuck = { version = "1.18", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

# macOS Metal surface
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[profile.release]
opt-level = 3
lto = true
